// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContainerEnv /> renders both env and configMapRef envFrom 1`] = `
<body>
  <div>
    <div
      class="grid grid-cols-[140px_1fr] gap-x-4 py-3 border-b border-border last:border-b-0 ContainerEnvironment"
    >
      <span
        class="text-sm text-muted-foreground"
      >
        Environment
      </span>
      <div
        class="text-sm text-foreground"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            foobar
          </span>
           : 
          https://localhost:12345
        </div>
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            configFoo
          </span>
           : 
          configBar
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders env 1`] = `
<body>
  <div>
    <div
      class="grid grid-cols-[140px_1fr] gap-x-4 py-3 border-b border-border last:border-b-0 ContainerEnvironment"
    >
      <span
        class="text-sm text-muted-foreground"
      >
        Environment
      </span>
      <div
        class="text-sm text-foreground"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            foobar
          </span>
           : 
          https://localhost:12345
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders env 2`] = `
<body>
  <div>
    <div
      class="grid grid-cols-[140px_1fr] gap-x-4 py-3 border-b border-border last:border-b-0 ContainerEnvironment"
    >
      <span
        class="text-sm text-muted-foreground"
      >
        Environment
      </span>
      <div
        class="text-sm text-foreground"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            foobar
          </span>
           : 
          https://localhost:12345
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders envFrom when given a configMapRef 1`] = `
<body>
  <div>
    <div
      class="grid grid-cols-[140px_1fr] gap-x-4 py-3 border-b border-border last:border-b-0 ContainerEnvironment"
    >
      <span
        class="text-sm text-muted-foreground"
      >
        Environment
      </span>
      <div
        class="text-sm text-foreground"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            configFoo
          </span>
           : 
          configBar
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<ContainerEnv /> renders envFrom when given a secretRef 1`] = `
<body>
  <div>
    <div
      class="grid grid-cols-[140px_1fr] gap-x-4 py-3 border-b border-border last:border-b-0 ContainerEnvironment"
    >
      <span
        class="text-sm text-muted-foreground"
      >
        Environment
      </span>
      <div
        class="text-sm text-foreground"
      >
        <div
          class="variable"
        >
          <span
            class="var-name"
          >
            bar
          </span>
           : 
          secret(my-secret)[bar]
           
          <i
            class="Icon secret-button material interactive focusable"
            data-testid="show-secret-button-for-default/my-secret:bar"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="visibility"
            >
              visibility
            </span>
          </i>
          <div
            data-testid="tooltip-content-for-show-secret-button-for-default/my-secret:bar"
          >
            Show
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
